Home Page Changed
k

--- a/myApp/src/pages/main/tabs/tabs.html
+++ b/myApp/src/pages/main/tabs/tabs.html
@@ -1,6 +1,6 @@
 <ion-tabs class="tabs-positive tabs-icon-top" color="primary">
   <ion-tab [root]="tab1Root" tabTitle="Home" tabIcon="home"></ion-tab>
   <ion-tab [root]="tab2Root" tabTitle="About" tabIcon="information-circle"></ion-tab>
-  <ion-tab [root]="tab3Root" tabTitle="Contact" tabIcon="ion-ios-world"><i class="icon ion-ios-world"></i></ion-tab>
+  <ion-tab [root]="tab3Root" tabTitle="Contact" tabIcon="contact"></ion-tab>
 
 </ion-tabs>
