--- a/myApp/src/pages/main/home/home.html
+++ b/myApp/src/pages/main/home/home.html
@@ -5,7 +5,56 @@
     </ion-title>
   </ion-navbar>
 </ion-header>
+<ion-header>
+  <ion-navbar>
+    <ion-title>Home Page</ion-title>
+    <ion-buttons start>
+      <button ion-button icon-only>
+        <ion-icon name='contact'></ion-icon>
+      </button>
+    </ion-buttons>
+    <ion-buttons end>
+    <button ion-button icon-only>
+      <ion-icon name='search'></ion-icon>
+    </button>
+    </ion-buttons>
+  </ion-navbar>
+</ion-header>
 
+<ion-content padding class="buttons-components-page">
+  <ion-card>
+    <ion-card-content>
+      <img src="assets/img/img-icon.png" />
+    </ion-card-content>
+
+    <ion-item>
+      <button ion-button clear item-left>Button 1</button>
+      <button ion-button clear item-right>Button 2</button>
+    </ion-item>
+  </ion-card>
+
+  <ion-list>
+    <ion-item>
+      Log In
+      <button ion-button item-right outline>Portal</button>
+    </ion-item>
+
+    <ion-item>
+      Scan Item
+      <button ion-button item-right outline icon-left>
+        
+        Picture
+      </button>
+    </ion-item>
+
+    <ion-item>
+      Tap Item
+      <button ion-button item-right outline icon-right>
+        NFC
+      </button>
+    </ion-item>
+  </ion-list>
+</ion-content>
 <ion-content class="padding">
   <p>
     <a class="button icon icon-right ion-chevron-right" href="#/tab/facts">Scientific Facts</a>
