The QR Code implemented and fully functional

--- a/myApp/src/pages/main/home/home.html
+++ b/myApp/src/pages/main/home/home.html
@@ -41,8 +41,9 @@
 
     <ion-item>
       Scan Item
-      <button ion-button item-right outline icon-left>
-        
+
+      <button ion-button item-right outline (click)="changePage()">
+
         Picture
       </button>
     </ion-item>
@@ -54,11 +55,6 @@
       </button>
     </ion-item>
   </ion-list>
-</ion-content>
-<ion-content class="padding">
-  <p>
-    <a class="button icon icon-right ion-chevron-right" href="#/tab/facts">Scientific Facts</a>
-  </p>
 </ion-content>
 
 
