Errors fixed, The QR Code scanner is implemented and fully functional

--- a/myApp/src/pages/scanner/QRscanner/scanner.html
+++ b/myApp/src/pages/scanner/QRscanner/scanner.html
@@ -5,5 +5,6 @@
 </ion-navbar>
 
 <ion-content>
-  <button primary (click)="scan()">Scan</button>
+
+  <button ion-button full (click)="scan()">Scan</button>
 </ion-content>
