Activity page added and styling added to the side bar menu

--- a/myApp/src/pages/main/home/home.html
+++ b/myApp/src/pages/main/home/home.html
@@ -36,13 +36,13 @@
   <ion-list>
     <ion-item>
       Log In
-      <button ion-button item-right outline>Portal</button>
+      <button ion-button item-right outline (click)="activityPage()">Portal</button>
     </ion-item>
 
     <ion-item>
       Scan Item
 
-      <button ion-button item-right outline (click)="changePage()">
+      <button ion-button item-right outline (click)="scannerPage()">
 
         Picture
       </button>
