--- a/myApp/src/pages/main/contact/contact.html
+++ b/myApp/src/pages/main/contact/contact.html
@@ -7,13 +7,5 @@
 </ion-header>
 
 <ion-content>
-  <div class="list">
-    <div class="item">
-      @IonicFramework
-    </div>
-    <div class="item">
-      @DriftyTeam
-    </div>
-  </div>
-   <button (click)="launch()">Launch URL</button>
+   <button (click)="launch_themeable()">Launch URL</button>
 </ion-content>
