Modified colours of themeable browser

--- a/myApp/src/pages/main/contact/contact.html
+++ b/myApp/src/pages/main/contact/contact.html
@@ -7,5 +7,5 @@
 </ion-header>
 
 <ion-content>
-   <button (click)="launch_themeable()">Launch URL</button>
+   <button ion-button (click)="launch_themeable()">Launch URL</button>
 </ion-content>
