--- a/myApp/src/pages/main/home/home.html
+++ b/myApp/src/pages/main/home/home.html
@@ -1,25 +1,11 @@
 <ion-header>
-  <ion-navbar color="primary">
+  <ion-navbar color="dark">
     <ion-title>
       Home
     </ion-title>
   </ion-navbar>
 </ion-header>
-<ion-header>
-  <ion-navbar>
-    <ion-title>Home Page</ion-title>
-    <ion-buttons start>
-      <button ion-button icon-only>
-        <ion-icon name='contact'></ion-icon>
-      </button>
-    </ion-buttons>
-    <ion-buttons end>
-    <button ion-button icon-only>
-      <ion-icon name='search'></ion-icon>
-    </button>
-    </ion-buttons>
-  </ion-navbar>
-</ion-header>
+
 
 <ion-content padding class="buttons-components-page">
   <ion-card>
