Modified the UI and stlyling of all pages

--- a/myApp/src/pages/activity/subpages/checklist/checklist.html
+++ b/myApp/src/pages/activity/subpages/checklist/checklist.html
@@ -1,9 +1,9 @@
 <ion-header>
-  <ion-navbar>
+  <ion-navbar color="dark">
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title>Page One</ion-title>
+    <ion-title>Safety Checklist</ion-title>
   </ion-navbar>
 </ion-header>
 
