--- a/myApp/src/pages/main/about/about.html
+++ b/myApp/src/pages/main/about/about.html
@@ -7,9 +7,19 @@
 </ion-header>
 
 <ion-content class="padding">
-  <h3>Create hybrid mobile apps with the web technologies you love.</h3>
-  <p>Free and open source, Ionic offers a library of mobile-optimized HTML, CSS and JS components for building highly interactive apps.</p>
-  <p>Built with Sass and optimized for AngularJS.</p>
+  <h3>About Us</h3>
+
+
+ <p> The Office of Environmental Health and Safety is a staff function within the portfolio of the Vice President, Research and Innovation. EHS provides a broad range of health and safety services to the University community.</p>
+
+  <h3>Our Mission</h3>
+  <p>The mission of the EHS Department is to ensure that an environmentally responsible, safe and healthy work, research and study environment exists at the University of Toronto.</p>
+
+  <p>We do this by being proactive in identifying risks and emerging issues and by developing and implementing innovative, practical and sustainable processes to manage them, including training and awareness, teaching, provision of expert advice, emergency response and assurance.</p>
+
+  <p>Through close collaboration with all members of the University community we establish and maintain health and safety systems that are widely acknowledged to be of excellent quality and that, while not limiting or impeding academic freedom and freedom of research, maintain a high level of safety.</p>
+
+
   <p>
     <a class="button icon icon-right ion-chevron-right" href="#/tab/navstack">Tabs Nav Stack</a>
   </p>
