--- a/myApp/src/pages/main/home/home.html
+++ b/myApp/src/pages/main/home/home.html
@@ -27,8 +27,7 @@
 
     <ion-item>
       Scan Item
-
-      <button ion-button item-right outline (click)="scannerPage()">
+      <button ion-button item-right outline (click)="scan()">
 
         Picture
       </button>
