--- a/myApp/src/pages/activity/subpages/notification/notification.html
+++ b/myApp/src/pages/activity/subpages/notification/notification.html
@@ -1,8 +1,9 @@
 <ion-header>
-  <ion-navbar>
-    <ion-title>
-      Ionic Blank
-    </ion-title>
+  <ion-navbar color="dark">
+    <button ion-button menuToggle>
+      <ion-icon name="menu"></ion-icon>
+    </button>
+    <ion-title>Notification</ion-title>
   </ion-navbar>
 </ion-header>
 
