--- a/myApp/src/pages/activity/subpages/reportaccident/reportaccident.html
+++ b/myApp/src/pages/activity/subpages/reportaccident/reportaccident.html
@@ -1,9 +1,9 @@
 <ion-header>
-  <ion-navbar>
+  <ion-navbar color="dark">
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title>Page Two</ion-title>
+    <ion-title>Report Accident</ion-title>
   </ion-navbar>
 </ion-header>
 
