Changed the theme of the app

--- a/myApp/src/pages/main/tabs/tabs.html
+++ b/myApp/src/pages/main/tabs/tabs.html
@@ -1,4 +1,4 @@
-<ion-tabs class="tabs-positive tabs-icon-top" color="dark">
+<ion-tabs class="tabs-positive tabs-icon-top" color="twitter">
   <ion-tab [root]="tab1Root" tabTitle="Home" tabIcon="home"></ion-tab>
   <ion-tab [root]="tab2Root" tabTitle="About" tabIcon="information-circle"></ion-tab>
   <ion-tab [root]="tab3Root" tabTitle="Contact" tabIcon="contact"></ion-tab>
