--- a/myApp/src/pages/activity/subpages/reportaccident/reportaccident.html
+++ b/myApp/src/pages/activity/subpages/reportaccident/reportaccident.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-navbar color="dark">
+  <ion-navbar color="twitter">
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
