Added new pages, modified the styling of EHS Resourses page and the home page

--- a/myApp/src/pages/activity/subpages/ehs/ehs.html
+++ b/myApp/src/pages/activity/subpages/ehs/ehs.html
@@ -3,7 +3,7 @@
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title>Safety Checklist</ion-title>
+    <ion-title>EHS Resources</ion-title>
   </ion-navbar>
 </ion-header>
 
