--- a/myApp/src/pages/main/home/home.html
+++ b/myApp/src/pages/main/home/home.html
@@ -7,10 +7,12 @@
 </ion-header>
 
 
+
+
 <ion-content padding class="buttons-components-page">
   <ion-card>
-    <ion-card-content>
-      <img src="assets/img/img-icon.png" />
+    <ion-card-content class="cards-md">
+      <img src="assets/img/safety.jpg" />
     </ion-card-content>
 
     <ion-item>
