Added a custom made splash screen, a new app icon and modified the content display

--- a/myApp/src/pages/activity/subpages/ehs/ehs.html
+++ b/myApp/src/pages/activity/subpages/ehs/ehs.html
@@ -74,7 +74,7 @@
         Occupational Health
       </ion-card-title>
       <p>
-        The focus of Occupational Health Services is to prevent injury and illness throh_ff7f00ough medical surveillance programs.
+        The focus of Occupational Health Services is to prevent injury and illness through medical surveillance programs.
       </p>
     </ion-card-content>
 
