The backend and the user authorization working correctly

--- a/myApp/src/pages/activity/subpages/ehs/ehs.html
+++ b/myApp/src/pages/activity/subpages/ehs/ehs.html
@@ -8,11 +8,11 @@
 </ion-header>
 
 
-<ion-content class="cards-sm">
+<ion-content class="card-background-page cards-sm">
 
   <ion-card>
 
-    <img src="assets/img/biosafety.png"/>
+    <img (click)="launch_themeable('https://ehs.utoronto.ca/our-services/biosafety/')" src="assets/img/occupationalsafety.png" src="assets/img/biosafety.png"/>
 
     <ion-card-content>
       <ion-card-title>
@@ -29,7 +29,7 @@
   <ion-card>
 
     <div>
-      <img src="assets/img/chemicalsafety.png"/>
+      <img (click)="launch_themeable('https://ehs.utoronto.ca/our-services/chemical-and-lab-safety/')" src="assets/img/chemicalsafety.png"/>
     </div>
 
     <ion-card-content>
@@ -47,7 +47,7 @@
   <ion-card>
 
     <div>
-      <img src="assets/img/environmentalprotection.png"/>
+      <img (click)="launch_themeable('https://ehs.utoronto.ca/our-services/environmental-protection-services/')" src="assets/img/environmentalprotection.png"/>
     </div>
 
     <ion-card-content>
@@ -66,7 +66,7 @@
   <ion-card>
 
     <div>
-      <img src="assets/img/occupationalhealth.png"/>
+      <img (click)="launch_themeable('https://ehs.utoronto.ca/our-services/occupational-health/')" src="assets/img/occupationalhealth.png"/>
     </div>
 
     <ion-card-content>
@@ -83,7 +83,7 @@
   <ion-card>
 
     <div>
-      <img src="assets/img/occupationalsafety.png"/>
+      <img (click)="launch_themeable('https://ehs.utoronto.ca/our-services/occupational-hygiene-safety/')" src="assets/img/occupationalsafety.png"/>
     </div>
 
     <ion-card-content>
@@ -100,7 +100,7 @@
   <ion-card>
 
     <div>
-      <img src="assets/img/radiationsafety.png"/>
+      <img (click)="launch_themeable('https://ehs.utoronto.ca/our-services/radiation-safety/')" src="assets/img/radiationsafety.png"/>
     </div>
 
     <ion-card-content>
@@ -118,7 +118,7 @@
   <ion-card>
 
     <div>
-      <img src="assets/img/training.png"/>
+      <img (click)="launch_themeable('https://ehs.utoronto.ca/basic-health-and-safety-training/')" src="assets/img/training.png"/>
     </div>
 
     <ion-card-content>
