--- a/myApp/src/pages/activity/subpages/notification/notification.html
+++ b/myApp/src/pages/activity/subpages/notification/notification.html
@@ -1,15 +1,30 @@
 <ion-header>
-  <ion-navbar color="twitter">
+  <ion-navbar color="twitter" >
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title>Notification</ion-title>
+    <ion-title>Notifications</ion-title>
   </ion-navbar>
 </ion-header>
 
-<ion-content padding>
-  The world is your oyster.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-  </p>
+<ion-content>
+
+  <ion-list no-lines>
+
+    <ion-item-sliding *ngFor="let todo of todos">
+
+      <ion-item>
+        {{todo.title}}
+      </ion-item>
+
+      <ion-item-options>
+        <button ion-button color="danger" (click)="deleteTodo(todo)">
+          <ion-icon name="trash"></ion-icon>
+          Delete
+        </button>
+      </ion-item-options>
+    </ion-item-sliding>
+
+  </ion-list>
+
 </ion-content>
