--- a/myApp/src/pages/main/about/about.html
+++ b/myApp/src/pages/main/about/about.html
@@ -6,7 +6,7 @@
   </ion-navbar>
 </ion-header>
 
-<ion-content class="cards-sm">
+<ion-content class="card-background-page cards-sm">
 
   <ion-card>
 
