--- a/myApp/src/pages/activity/activity.html
+++ b/myApp/src/pages/activity/activity.html
@@ -1,15 +1,22 @@
-<ion-menu [content]="content">
+<ion-menu [content]="content" >
   <ion-header>
     <ion-toolbar color="twitter">
       <ion-title >Menu</ion-title>
     </ion-toolbar>
   </ion-header>
 
+
   <ion-content>
     <ion-list>
       <button menuClose ion-item *ngFor="let p of pages"[class.activeHighlight]="checkActive(p)" (click)="openPage(p)">
         {{p.title}}
       </button>
+
+      <button  menuClose ion-item (click)="logout()">
+        Logout
+        <ion-icon name="log-out"></ion-icon>
+      </button>
+
     </ion-list>
   </ion-content>
 
