The UI for push notification is done

--- a/myApp/src/pages/signup-page/signup-page.html
+++ b/myApp/src/pages/signup-page/signup-page.html
@@ -1,6 +1,6 @@
 <ion-header>
 
-  <ion-navbar color="secondary">
+  <ion-navbar color="twitter">
     <ion-title>Create Account</ion-title>
   </ion-navbar>
 
