--- a/myApp/src/pages/activity/subpages/notification/notification.html
+++ b/myApp/src/pages/activity/subpages/notification/notification.html
@@ -9,22 +9,14 @@
 
 <ion-content>
 
-  <ion-list no-lines>
-
-    <ion-item-sliding *ngFor="let todo of todos">
-
-      <ion-item>
-        {{todo.title}}
-      </ion-item>
-
-      <ion-item-options>
-        <button ion-button color="danger" (click)="deleteTodo(todo)">
-          <ion-icon name="trash"></ion-icon>
-          Delete
-        </button>
-      </ion-item-options>
-    </ion-item-sliding>
-
+  <ion-list>
+    <ion-item padding *ngFor="let d of data" (click)="toggleDetails(d)">
+      <ion-icon color="primary" item-right [name]="d.icon"></ion-icon>
+      {{d.title}}
+      <div *ngIf="d.showDetails">{{d.message}}</div>
+    </ion-item>
   </ion-list>
+
+
 
 </ion-content>
