--- a/myApp/src/pages/main/home/home.html
+++ b/myApp/src/pages/main/home/home.html
@@ -54,6 +54,13 @@
         Detect
       </button>
     </ion-item>
+	
+	<ion-item>
+      Notify
+      <button ion-button item-right outline icon-right (click)="schedule()">
+        Notify
+      </button>
+    </ion-item>
   </ion-list>
 </ion-content>
 
