--- a/myApp/src/pages/activity/subpages/lab/lab.html
+++ b/myApp/src/pages/activity/subpages/lab/lab.html
@@ -15,4 +15,6 @@
   </p>
 
   <button ion-button secondary menuToggle>Toggle Menu</button>
+  
+  <button ion-button click="course()">Display</button>
 </ion-content>
