--- a/myApp/src/pages/activity/subpages/lab/lab.html
+++ b/myApp/src/pages/activity/subpages/lab/lab.html
@@ -7,14 +7,27 @@
   </ion-navbar>
 </ion-header>
 
+
+<ion-content class="cards-bg">
+
+<ion-card *ngFor="let course of courses">
+  <ion-card-header>
+	<div class="Course" [innerHTML]="course.Name"></div>
+	<ion-toggle checked="true"></ion-toggle>
+  </ion-card-header>
+
+  <ion-card-content>
+	<p>Next lab is: </p>
+    <div class="Day" [innerHTML]="course.Day"></div>
+    <div class="Time" [innerHTML]="course.Time"></div>
+  </ion-card-content>
+
+</ion-card>
+
 <ion-content padding>
-  <h3>Ionic Menu Starter</h3>
-
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will show you the way.
-  </p>
-
-  <button ion-button secondary menuToggle>Toggle Menu</button>
-  
-  <button ion-button click="course()">Display</button>
+	<button ion-button (click) = "Enable()">Set Lab Alerts</button>
+	<button ion-button (click) = "Disable()">Disable Lab Alerts </button>
 </ion-content>
+
+</ion-content>
+
