--- a/myApp/src/pages/activity/subpages/lab/lab.html
+++ b/myApp/src/pages/activity/subpages/lab/lab.html
@@ -10,10 +10,10 @@
 
 <ion-content class="cards-bg">
 
-<ion-card *ngFor="let course of courses">
+<ion-card *ngFor="let course of courses; let i = index;">
   <ion-card-header>
 	<div class="Course" [innerHTML]="course.Name"></div>
-	<ion-toggle checked="true"></ion-toggle>
+	<ion-toggle (click)=schedule(i) checked="false"></ion-toggle>
   </ion-card-header>
 
   <ion-card-content>
