--- a/myApp/src/pages/activity/subpages/lab/lab.html
+++ b/myApp/src/pages/activity/subpages/lab/lab.html
@@ -8,21 +8,25 @@
 </ion-header>
 
 
-<ion-content class="cards-bg">
+<ion-content padding>
 
-<ion-card *ngFor="let course of courses; let i = index;">
+<ion-card *ngFor="let course of courses">
   <ion-card-header>
-	<div class="Course" [innerHTML]="course.Name"></div>
-	<ion-toggle (click)=schedule(i) checked="false"></ion-toggle>
+	<!--<div class="courseName" [innerHTML]="course.Name"></div>
+	<ion-toggle (click)=schedule(i) item-right checked="false"></ion-toggle> -->
+	{{course.Name}}
   </ion-card-header>
 
   <ion-card-content>
 	<p>Next lab is: </p>
-    <div class="Day" [innerHTML]="course.Day"></div>
-    <div class="Time" [innerHTML]="course.Time"></div>
-  </ion-card-content>
+	<p>{{course.Day}}</p>
+	<p>{{course.Time}}</p>
+    <!-- <div class="Day" [innerHTML]="course.Day"></div>
+    <div class="Time" [innerHTML]="course.Time"></div> -->
+ </ion-card-content>
 
 </ion-card>
+
 
 <ion-content padding>
 	<button ion-button (click) = "Enable()">Set Lab Alerts</button>
@@ -30,4 +34,6 @@
 </ion-content>
 
 </ion-content>
+
+
 
