Major modifications in the past accidents and notifications pages

--- a/myApp/src/pages/activity/activity.html
+++ b/myApp/src/pages/activity/activity.html
@@ -12,7 +12,7 @@
         {{p.title}}
       </button>
 
-      <button  menuClose ion-item (click)="logout()">
+      <button start  menuClose ion-item (click)="logout()">
         Logout
         <ion-icon name="log-out"></ion-icon>
       </button>
