--- a/myApp/src/pages/activity/subpages/checklist/checklist.html
+++ b/myApp/src/pages/activity/subpages/checklist/checklist.html
@@ -9,131 +9,18 @@
 
 
 
-<ion-content class="card-background-page cards-sm">
-
-  <ion-card>
-
-    <img src="assets/img/biosafety.png"/>
-
-    <ion-card-content>
-      <ion-card-title>
-        Biosafety
-      </ion-card-title>
-      <p>
-        The University of Toronto Biosafety Program is designed to protect lab personnel and the public from potential exposure to infectious agents, and to prevent the release of agents harmful to plants or animals.
-      </p>
-    </ion-card-content>
-
-
-  </ion-card>
-
-  <ion-card>
-
-    <div>
-      <img src="assets/img/chemicalsafety.png"/>
-    </div>
-
-    <ion-card-content>
-      <ion-card-title>
-        Chemical & Lab Safety
-      </ion-card-title>
-      <p>
-        The Chemical and Lab safety group assists professors, staff and students with all aspects of lab safety that are not related to biological or radiological issues.
-      </p>
-    </ion-card-content>
-
-
-  </ion-card>
-
-  <ion-card>
-
-    <div>
-      <img src="assets/img/environmentalprotection.png"/>
-    </div>
-
-    <ion-card-content>
-      <ion-card-title>
-        Environmental Protection Service
-      </ion-card-title>
-      <p>
-        Providing training, information and advice relating to storage, handling and disposal of chemical and radioactive wastes, incompatible chemical combinations and environmental legislation.
-      </p>
-    </ion-card-content>
-
-
-
-  </ion-card>
-
-  <ion-card>
-
-    <div>
-      <img src="assets/img/occupationalhealth.png"/>
-    </div>
-
-    <ion-card-content>
-      <ion-card-title>
-        Occupational Health
-      </ion-card-title>
-      <p>
-        The focus of Occupational Health Services is to prevent injury and illness throh_ff7f00ough medical surveillance programs.
-      </p>
-    </ion-card-content>
-
-
-  </ion-card>
-  <ion-card>
-
-    <div>
-      <img src="assets/img/occupationalsafety.png"/>
-    </div>
-
-    <ion-card-content>
-      <ion-card-title>
-        Occupational Hygiene & Safety
-      </ion-card-title>
-      <p>
-        Occupational Hygiene and Safety Services provides a wide range of services including assessments, program development, training and advice.
-      </p>
-    </ion-card-content>
-
-
-  </ion-card>
-  <ion-card>
-
-    <div>
-      <img src="assets/img/radiationsafety.png"/>
-    </div>
-
-    <ion-card-content>
-      <ion-card-title>
-        Radiation, Laser & X-ray Safety
-      </ion-card-title>
-      <p>
-        The complete text and requirements of the University of Toronto Radiation Protection Program are found in the U of T Radiation Policies and Procedures Manual, a copy of which is provided to each Radiation Permit Holder.
-      </p>
-    </ion-card-content>
-
-
-  </ion-card>
-
-  <ion-card>
-
-    <div>
-      <img src="assets/img/training.png"/>
-    </div>
-
-    <ion-card-content>
-      <ion-card-title>
-        Health & Safety Training
-      </ion-card-title>
-      <p>
-        The Office of Environmental Health & Safety offers health and safety training to U of T faculty, staff and students as per work and course requirements.
-      </p>
-    </ion-card-content>
-
-
-  </ion-card>
-
-
+<ion-content>
+	<ion-card>
+		<ion-card-header><h1>General Safety</h1></ion-card-header>
+		<ion-list>
+			<ion-item text-wrap><ion-icon name="list"></ion-icon>Bench tops and work areas free of unsafe clutter</ion-item>
+			<ion-item text-wrap><ion-icon name="list"></ion-icon>Waste safely stored and labelled</ion-item>
+			<ion-item text-wrap><ion-icon name="list"></ion-icon>Fume hood is uncluttered</ion-item>
+			<ion-item text-wrap><ion-icon name="list"></ion-icon>Lab coats, long pants and closed shoes are worn</ion-item>
+			<ion-item text-wrap><ion-icon name="list"></ion-icon>Sash closed when hood not in use, and as low as practical when used</ion-item>
+			<ion-item text-wrap><ion-icon name="list"></ion-icon>Trained in WHMIS and GHS</ion-item>
+			<ion-item text-wrap><ion-icon name="list"></ion-icon>Buddy system used for work alone</ion-item>
+		</ion-list>
+	</ion-card>
 </ion-content>
 
