minor modification in checklist page

--- a/myApp/src/pages/activity/subpages/checklist/checklist.html
+++ b/myApp/src/pages/activity/subpages/checklist/checklist.html
@@ -9,7 +9,7 @@
 
 
 
-<ion-content>
+<ion-content class="cards-bg">
 	<ion-card>
 		<ion-card-header><h1>General Safety</h1></ion-card-header>
 		<ion-list>
@@ -22,5 +22,29 @@
 			<ion-item text-wrap><ion-icon name="list"></ion-icon>Buddy system used for work alone</ion-item>
 		</ion-list>
 	</ion-card>
+
+
+    <ion-card class="cards-list-demo">
+
+      <ion-list>
+        <button ion-item>
+          <ion-icon name='cart' item-left></ion-icon>
+          Shopping
+        </button>
+
+        <button ion-item>
+          <ion-icon name='medical' item-left></ion-icon>
+          Hospital
+        </button>
+
+        <button ion-item>
+          <ion-icon name='cafe' item-left></ion-icon>
+          Cafe
+        </button>
+
+      </ion-list>
+    </ion-card>
+
+
 </ion-content>
 
