Modified the styling of Login, Register, and Refresher Quiz Pages

--- a/myApp/src/pages/activity/subpages/checklist/checklist.html
+++ b/myApp/src/pages/activity/subpages/checklist/checklist.html
@@ -9,41 +9,21 @@
 
 
 
-<ion-content class="cards-bg">
-	<ion-card>
-		<ion-card-header><h1>General Safety</h1></ion-card-header>
-		<ion-list>
-			<ion-item text-wrap><ion-icon name="list"></ion-icon>Bench tops and work areas free of unsafe clutter</ion-item>
-			<ion-item text-wrap><ion-icon name="list"></ion-icon>Waste safely stored and labelled</ion-item>
-			<ion-item text-wrap><ion-icon name="list"></ion-icon>Fume hood is uncluttered</ion-item>
-			<ion-item text-wrap><ion-icon name="list"></ion-icon>Lab coats, long pants and closed shoes are worn</ion-item>
-			<ion-item text-wrap><ion-icon name="list"></ion-icon>Sash closed when hood not in use, and as low as practical when used</ion-item>
-			<ion-item text-wrap><ion-icon name="list"></ion-icon>Trained in WHMIS and GHS</ion-item>
-			<ion-item text-wrap><ion-icon name="list"></ion-icon>Buddy system used for work alone</ion-item>
-		</ion-list>
+<ion-content>
+
+	<ion-card class="top-layer">
+    <ion-card-title>General Safety</ion-card-title>
+    <ul>
+      <li>Bench tops and work areas free of unsafe clutter</li>
+      <li>Waste safely stored and labelled</li>
+      <li>Fume hood is uncluttered</li>
+      <li>Lab coats, long pants and closed shoes are worn</li>
+      <li>Sash closed when hood not in use, and as low as practical when used</li>
+      <li>Trained in WHMIS and GHS</li>
+      <li>Buddy system used for work alone</li>
+    </ul>
+
 	</ion-card>
-
-
-    <ion-card class="cards-list-demo">
-
-      <ion-list>
-        <button ion-item>
-          <ion-icon name='cart' item-left></ion-icon>
-          Shopping
-        </button>
-
-        <button ion-item>
-          <ion-icon name='medical' item-left></ion-icon>
-          Hospital
-        </button>
-
-        <button ion-item>
-          <ion-icon name='cafe' item-left></ion-icon>
-          Cafe
-        </button>
-
-      </ion-list>
-    </ion-card>
 
 
 </ion-content>
