--- a/myApp/src/pages/main/home/home.html
+++ b/myApp/src/pages/main/home/home.html
@@ -18,12 +18,12 @@
   <ion-list>
     <ion-item>
       Log In
-      <button ion-button item-right (click)="loginPage()" color="twitter">Portal</button>
+      <button ion-button item-right (click)="loginPage()" color="twitter" class="Btn">Portal</button>
     </ion-item>
 
     <ion-item>
       Scan Item
-      <button ion-button item-right  (click)="scan()" color="twitter">
+      <button ion-button item-right  (click)="scan()" color="twitter" class="Btn">
 
         Picture
       </button>
@@ -31,14 +31,14 @@
 
         <ion-item>
       Tap Item
-      <button ion-button item-right icon-right (click)="nfcPage()" color="twitter">
+      <button ion-button item-right icon-right (click)="nfcPage()" color="twitter" class="Btn">
         NFC
       </button>
     </ion-item>
 
 	<ion-item>
       Beacons
-      <button ion-button item-right icon-right (click)="beacon()" color="twitter">
+      <button ion-button item-right icon-right (click)="beacon()" color="twitter" class="Btn">
         Detect
       </button>
   </ion-item>
